<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greenDark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/greenDark">


        <ImageView
            android:id="@+id/trash_image_answer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/baigeAccent"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.13" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            android:gravity="bottom|center"
            android:hapticFeedbackEnabled="true"
            android:longClickable="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">


            <Button
                android:id="@+id/trash_glass"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trash_glass"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/glassTrash"
                android:textStyle="bold"
                app:icon="@drawable/baseline_delete_outline_white_36"
                app:iconTint="@color/glassTrash" />

            <Button
                android:id="@+id/trash_paper"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trash_paper"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/paperTrash"
                android:textStyle="bold"
                app:icon="@drawable/baseline_delete_outline_white_36"
                app:iconTint="@color/paperTrash" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            android:gravity="bottom|center"
            android:hapticFeedbackEnabled="true"
            android:longClickable="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trash_image_answer">


            <Button
                android:id="@+id/trash_food"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trash_food"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/foodTrash"
                android:textStyle="bold"
                app:icon="@drawable/baseline_delete_outline_white_36"
                app:iconTint="@color/foodTrash" />

            <Button
                android:id="@+id/trash_plastic"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trash_plastic"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/plasticTrash"
                android:textStyle="bold"
                app:icon="@drawable/baseline_delete_outline_white_36"
                app:iconTint="@color/plasticTrash" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            android:gravity="bottom|center"
            android:hapticFeedbackEnabled="true"
            android:longClickable="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <Button
                android:id="@+id/trash_others"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trash_others"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/othersTrash"
                android:textStyle="bold"
                app:icon="@drawable/baseline_delete_outline_white_36"
                app:iconTint="@color/othersTrash"
                app:layout_constraintWidth_percent="0.4" />
        </LinearLayout>

        <!--        </com.google.android.material.card.MaterialCardView>-->
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>